--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     .logo {
       font-size: 2rem;
       font-weight: bold;
-      color: #black;
     }
 
     nav a {
@@ -66,7 +65,9 @@
       background: #0ff;
       transition: 0.3s ease;
     }
-    nav a:hover::after { width: 100%; }
+    nav a:hover::after {
+      width: 100%;
+    }
 
     .toggle-switch {
       position: relative;
@@ -223,6 +224,24 @@
       margin-top: 0.5rem;
     }
 
+    body.light-mode .testimonials-container {
+      background: #f9f9f9;
+      color: #000;
+    }
+
+    body.light-mode .testimonial-box {
+      background: rgba(0, 0, 0, 0.05);
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+
+    body.light-mode .testimonial-box h4 {
+      color: #0077ff;
+    }
+
+    body.light-mode .testimonial-box img {
+      border-color: #0077ff;
+    }
+
     .graph-section {
       background: #000;
       padding: 5rem 2rem;
@@ -284,7 +303,7 @@
 
 <section class="graph-section">
   <h2>Performance Insights</h2>
-  <img src="https://assets-global.website-files.com/5a1eb87c9afe1000014a4c7d/64133251b009197c16f461ee_FwuFxnIYpfPZLzOnZua0elVoCcrYs6U1B_nWyzQnETHTJi8Q4xhXguajTKoEb2GEaRlBI7cv9MWGtt9fXgIpsz6K8CidHFcwv7ZxbbSf6gxF5a-kWdckn6kn9ee-KwPn9K4zPdrDkDVs5NbIPRUFkw.png" alt="Analytics Graph">
+  <img src="https://media.licdn.com/dms/image/sync/v2/D4E27AQGDD9xSZ6pDLg/articleshare-shrink_800/articleshare-shrink_800/0/1739569664934?e=2147483647&v=beta&t=hsmCrLqhWJiMOIs3sg7uQu7hXvx0ANzNp0L1GDytsro">
 </section>
 
 <section id="testimonials" class="testimonials-container">
